--- a/home/templates/home/impression.html
+++ b/home/templates/home/impression.html
@@ -1,3 +1,9 @@
+   <!--  <button onclick="display()">Click to Print</button>
+   <script>
+      function display() {
+         window.print();
+      }
+   </script> -->
    <br>
    <button onclick="imprimer()" class="bleu whiteT boutton">Imprimer la page</button>
    <script>
