--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -7,8 +7,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="{% static 'css/styl.css' %}">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 		<title>GestionFAI</title>
-
 	</head>
 	{% block body %}
 	<body style="background-color: #F1F1F1;">
