--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -6,7 +6,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="{% static 'css/style.css' %}">
+		<link rel="stylesheet" href="{% static 'css/styl.css' %}">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 		<title>GestionFAI</title>
 	</head>
@@ -23,7 +23,7 @@
 		{% block footer%}
 	        {% include './footer.html' %}
 		{% endblock %}
-	</body>
+	</body>	
 	{% bootstrap_javascript %}
 	<script type="text/javascript" src={% static 'js/pageactive.js' %}></script>
 </html>
