--- a/home/templates/home/header.html
+++ b/home/templates/home/header.html
@@ -23,12 +23,14 @@
 		    	      		<li class="nav-item">
 		    	        		<a class="nav-link" href="{% url 'technique'%}">Technique</a>
 		    	      		</li>
-		    	      		<li class="nav-item">
+<!-- 		    	      		<li class="nav-item">
 		    	        		<a class="nav-link" href="{% url 'statistique'%}">Statistique</a>
-		    	      		</li>
+		    	      		</li> -->
 						</ul>
 						<form>
-		    	     		<button class="btn" style="background-color: #F08D00;" type="submit">Sign in</button>
+		    	     				
+			    	     		<button class="btn" style="background-color: #F08D00;" type="submit"><a href="{% url 'index' %}admin">Connectez-vous</a></button>
+		    	     		
 		    	     	</form>
 					</div>
 				</div>
