--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,10 @@
   width: 75px;
 }
 
+button > a{
+  text-decoration: none;
+  color: black;
+}
 /* Couleur */
 .bg{
   background-color: #060452;
@@ -109,13 +113,26 @@
       font-size: 100%;
     }
 }
+/*Impression*/
+@media only print {
+   body {
+      visibility: hidden;
+   }
+   .cacher{
+      visibility: hidden;           
+   }
+   .voir {
+      visibility: visible;
+   }
+}
+
 /*@media (min-width: 768px) {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
 
   }
 }*/
-  /* fin carousel */
+  /* fin */
 
 
 /* TEAM CONTENT
@@ -169,7 +186,6 @@
 .team h2 {
   font-weight: 600;
 }
-/* rtl:begin:ignore */
 
 .nombre{
   display: flex;
@@ -183,32 +199,8 @@
   border-radius: 7px 7px 7px 7px;
 }
 
-
-
 .ajust{
   text-align: center;
 }
 
-
-/* rtl:end:ignore */
-
 /*pied de page*/
-.pied{
-  margin-bottom: 0px;
-  background-color: black;
-  color: white;
-  text-align: center;
-}
-
-/*Impression*/
-@media only print {
-   body {
-      visibility: hidden;
-   }
-   .cacher{
-      visibility: hidden;           
-   }
-   .voir {
-      visibility: visible;
-   }
-}
